--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: M 2022
-Theme URI: 
+Theme URI: https://github.com/frostkom/m-2022-child
 Description: 
-Version: 1.0.0
+Version: 1.0.3
 Licence: GPLv2 or later
 Author: Martin Fors
 Author URI: https://frostkom.se
 
 Template: mf_theme
 
-GitHub Theme URI: 
+GitHub Theme URI: frostkom/m-2022-child
 */
