--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 Theme Name: M 2022
 Theme URI: https://github.com/frostkom/m-2022-child
 Description:
-Version: 1.0.16
+Version: 1.0.17
 Licence: GPLv2 or later
 Author: Martin Fors
-Author URI: https://frostkom.se
+Author URI: https://martinfors.se
 
 Template: mf_theme
 
